<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailMalaikatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            tools:srcCompat= "@tools:sample/avatars"
            android:contentDescription="@string/thumbnail_image"
            android:adjustViewBounds="true">
        </ImageView>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/malaikat_nama"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/tv_item_duty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/duty_malaikat"
            android:textSize="16sp">
        </TextView>

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/detail_malaikat"
            android:textSize="14sp">
        </TextView>

    </LinearLayout>
</ScrollView>