<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfilActivity"
    android:orientation="vertical"
    android:background="@color/pink_700">


    <TextView
        android:id="@+id/tv_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/profil"/>



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profil"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/profil" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/name"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/tv_text_born"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="normal"
            android:text="@string/born"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" >

        </TextView>


    </LinearLayout>


</LinearLayout>